css/styles.css
/* ... */
.skew-cc-QuoteWrap{
  width:100%;
  height:50px;
  position:absolute;
  left:0px;
  background: linear-gradient(to right bottom, var(--mybackgroundBeige1) 49%, #4A154B 50%), linear-gradient(-50deg, var(--mybackgroundBeige1) 16px, #000 0);
}

/* END OF ANGLED CSS */

.btn {
  cursor: pointer;
  transition-property: background-color, color, border;
  transition-duration: 200ms;
  transition-timing-function: ease-in;
}

.btnoutline {
  background-color: transparent;
  border: 1px solid var(--myblue);
  border-radius: 5px;
  color: var(--myblue);
  padding: 10px;
  font-size: 0.8rem;
  /*  font-weight: bold */
  font-family: PoppinsBold;
}
.btnfill {
  background-color: var(--myblue);
  border: 1px solid white;
  border-radius: 5px;
  color: white;
  padding: 10px;
  font-size: 0.8rem;
  /*  font-weight: bold */
  font-family: PoppinsBold;
}
.btnshadow {
  color: #F9F9F2;
  background-color: #5293DD;
  font-family: PoppinsBold;
  font-size: 0.7rem;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}
.btnshadow:hover {
  /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);  */
}
.white {
  background-color: white;
}

.btnXL {
  padding: 15px 20px 15px 20px;
  font-size: 1.1rem;
}

.submit {
 
  padding: 8px 6px 8px 6px;
  border-radius: 6px;
  width: 100px;
  background-color: var(--myblue);
  border: 1px solid var(--myblue);
  color: #f9f9f2;
  font-size: 1.2rem;
  font-family: PoppinsBold;

}
.submit:active {
  transform: translateY(1px);

}

.submit:hover {
  background-color: var(--myblue);
  color: white;
}

.sectionwrapper {
  padding: 40px 20px 40px 20px;
}

.sectionwrapperfeatures1 {
  height: 250px;
}


.centertext {
  text-align: center;
}

.centerimg {
  display: block;
  margin-left: auto;
  margin-right: auto;

}
.centerhorizvert {
  align-self: center;
  justify-self: center;
}

.invisible {
  visibility: hidden;
}
.visible {
  visibility: visible;
}
.whitetext {
  color: white;
}
.smallfont {
  font-size: 0.6rem;
}
.mediumfont {
  font-size: 0.8rem;
}
.ulnostyle {
  list-style: none;
  line-height: 1.5rem;
  padding: 0;
  margin: 0;
}
.anostyle > li a {
  text-decoration: none;
  color: white;
}

.responsiveimg {
  width: 100%;
  height: auto;
}
.imgfill {
  width: 100%;
  height: auto;
}

.quotewrapper {
  padding: 40px 0 80px 0;
   background-color: var(--mybackgroundBeige1);
}
.quotewrapper > div {
  margin-top: 20px;
}
.quotewrapper > h3 {
  padding: 40px 0 80px 0;
}
.quotetext{
  padding-bottom: 80px;
}



/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
                          NAVBAR  
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
.navwrapper {
  display: flex;
  justify-content: center;
 
}
nav {
 /*  background-color: #569ad7; */
  /* width: 1200px; */
 /*  width: 100%; */
  width: 100vw;
  display: flex;
  justify-content: space-between;
}

.logodiv {
  padding-top: 5px;
  padding-left: 10px;
}
#navbar ul {
  list-style: none;
  margin-right: 15px;
  /*   float: right; */
}

#navbar ul li {
  float: left;
}

#navbar ul li a {
  display: block;
  margin: 0 14px 0 20px;
  /* padding: 0 20px 0 10px; */
  text-align: center;
  text-decoration: none;
  color: var(--myblack);
  /*  color: black; */
  font-family: 'PoppinsBold';
  font-size: 15px;
  /*  border-bottom: 1px solid transparent; */
  line-height: 21px;
  transition-property: color;
  transition-duration: 300ms;
}
#navbar ul li a:hover {
  /*  text-decoration: underline; */
  /*  border-bottom: 1px solid var(--myblue); */
 /*  color: #9370db; */
  color: var(--myblue);

}

/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
HAMBURGER MENU 
* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */

.hamburger-menu {
  width: 30px;
  height: 30px;
  padding-top: 7px;
  position: absolute;
  top: 7px;
  right: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  cursor: pointer;
  z-index: 100;
}

.line {
  width: inherit;
  height: 3px;
 /*  background-color: var(--myblue); */
 background-color: #383838;
  border-radius: 2px;
  transition-property: transform, opacity;
  transition-duration: 500ms;

  /*   transform-origin: right;
  transition: transform 0.5s; */
}

.line.openline:nth-child(1) {
  transform: translate(0px, 10px) rotate(45deg);
  /*  transform-origin: top; */
}
.line.openline:nth-child(2) {
  opacity: 0;
}
.line.openline:nth-child(3) {
  transform: translate(0px, -10px) rotate(-45deg);

  /*   transform-origin: top; */
}

.menuhidden {
  height: 100vh;
 /*  height: 350px; */
  width: 200px;
/*   border-top-left-radius: 10px;
  border-bottom-left-radius: 10px; */
 /*  background-color: white; */
/*  background-color: var(--mybackgroundBeige2); */
/* #13016A */
background-color: var(--myblue);
  position: fixed;
  top: 0;
  right: -200px;
  transition: ease 0.5s;
}

.visibleright {
  right: 0px;
  /*   transition: ease 4s; */
}
/* --------- SLIDEMENU ---------- */
.slidemenu ul {
  list-style: none;
  padding-top: 45px;
  padding-left: 0px;
  width: 100%;
  /*   float: right; */
}
.slidemenu ul li {
}
.slidemenu ul li a {
  display: block;
  padding: 10px 5px 10px 5px;
  margin: 0px 5px 0px 5px;
  text-align: center;
  text-decoration: none;
  line-height: 1.5rem;
  /* color: var(--myblueh1); */
  color: var(--mybackgroundBeige3deep);
  font-family: PoppinsBold;
}
.slidemenu ul li a:hover {
/*   background-color:; */
  border-radius: 15px;
  /* opacity: 0.5; */
}
.activeSidebarLi {
  background-color: var(--mybackgroundBeige3deep);
  color: var(--myblueh1) !important; 
  border-radius: 15px;
}
/* ... */

